8086046: escape analysis generates incorrect code as of B67

Load bypasses arraycopy that sets the value after the ArrayCopyNode is expanded

Reviewed-by: kvn